<resources>
    <string name="app_name">Where</string>
    <string name="facebook_app_id">642165667008627</string>
    <string name="maps_api_key">AIzaSyDK-oIzSIMe0a-PEV8R2SYtMoQK2E8CwQA</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="price_prompt">价格</string>
    <string name="price_0_to_50">₱ 0–5k</string>
    <string name="price_0_to_1">₱ 0–1k</string>
    <string name="price_1_to_2">₱ 1–2k</string>
    <string name="price_2_to_5">₱ 2–5k</string>
    <string name="price_above_5">₱ 5k+</string>
    <string name="price_unit">₱</string>
    <string name="price_unit_format">₱%1$s</string>
    <string name="price_unit_discount_format">-₱%1$s</string>
    <string name="prompt_star">星级</string>
    <string name="prompt_price_star">价格/星级/评分</string>
    <string name="star_default">星级</string>
    <string name="score_default">评分</string>
    <string name="score_prompt">评分</string>
    <string name="start_less_than_2"><![CDATA[<2]]></string>
    <string name="digital_3">3</string>
    <string name="digital_4">4</string>
    <string name="digital_5">5</string>
    <string name="score_3_0">3.0&#160;一般</string>
    <string name="score_3_5">3.5&#160;满意</string>
    <string name="score_4_0">4.0&#160;很好</string>
    <string name="score_4_5">4.5&#160;超赞</string>
    <string name="ensure">确定</string>
    <string name="select_date">选择日期</string>
    <string name="calendar_sunday">日</string>
    <string name="calendar_monday">一</string>
    <string name="calendar_tuesday">二</string>
    <string name="calendar_wednesday">三</string>
    <string name="calendar_thursday">四</string>
    <string name="calendar_friday">五</string>
    <string name="calendar_saturday">六</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="cancel">取消</string>
    <string name="search_hotel_name">搜索酒店名称</string>
    <string name="search_news_keyword">搜索新闻关键字</string>
    <string name="search_keyword">搜索关键字</string>
    <string name="history_search">历史搜索</string>
    <string name="clear">清空</string>
    <string name="hot_search">热门搜索</string>
    <string name="comment_icon">commentIcon</string>
    <string name="save">保存</string>
    <string name="area_chain">中国 +86</string>
    <string name="area_philippines">菲律宾 +63</string>
    <string name="pay_order">支付订单</string>
    <string name="to_pay">立即支付</string>
    <string name="to_pay_2">去付款</string>
    <string name="to_cancel_order">取消订单</string>
    <string name="subscribe_prompt">预订</string>
    <string name="can_not_reduce">不能再减了</string>
    <string name="cancelable">可取消</string>
    <string name="not_cancelable">不可取消</string>
    <string name="total">共</string>
    <string name="total_night">共%1$d晚</string>
    <string name="enter_stay">入店</string>
    <string name="leave_stay">离店</string>
    <string name="calendar_enter_stay">入店</string>
    <string name="calendar_leave_stay">离店</string>
    <string name="date_format_month_day">MM月dd日</string>
    <string name="date_format_yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="date_format_mm_dd">MM-dd</string>
    <string name="date_format_year_month">yyyy年MM月</string>
    <string name="prompt_room_num">间数</string>
    <string name="all">全部</string>
    <string name="title_select_city">城市选择</string>
    <string name="mechanism_introduce">机构介绍</string>
    <string name="no_introduce">暂无介绍</string>
    <string name="enterprise_yellow_page">企业黄页</string>
    <string name="city_news">同城新闻</string>
    <string name="please_input_merchant_or_goods">请输入商户/商品等</string>
    <string name="title_convenience_service">便民服务</string>
    <string name="default_city_name">巴郎牙</string>
    <string name="search_none">没有搜索到相关内容~</string>
    <string name="coming_soon">即将上线</string>
    <string name="login_success">登录成功</string>
    <string name="commit_success">提交成功</string>
    <string name="hint_input_phone_number_2">请填写手机号</string>
    <string name="mine_change_language">切换语言</string>
    <string name="mine_merchant_settled">商家入驻</string>
    <string name="mine_collection_title">我的收藏</string>
    <string name="mine_address">我的地址</string>
    <string name="mine_reviews">待评价</string>
    <string name="mine_booked">待使用</string>
    <string name="mine_unpaid">待付款</string>
    <string name="mine_login_register">登录/注册</string>
    <string name="language_title">修改语言</string>
    <string name="home_search_hint">搜索标题或关键字</string>
    <string name="hotel_title">旅游住宿</string>
    <string name="search">查询</string>
    <string name="cancelled">已取消</string>
    <string name="completed">已完成</string>
    <string name="comment_num_prompt">%1$d条评论</string>
    <string name="main_tab_title_home">首页</string>
    <string name="main_tab_title_category">分类</string>
    <string name="main_tab_title_order">订单</string>
    <string name="main_tab_title_mine">我的</string>
    <string name="to_login">登录</string>
    <string name="mine_about_us">关于我们</string>
    <string name="to_review">去评价</string>
    <string name="payment_failed">支付失败</string>
    <string name="refunding">退款中</string>
    <string name="refunded">已退款</string>
    <string name="refund_failed">退款失败</string>
    <string name="position">定位</string>
    <string name="loading">加载中…</string>
    <string name="close_page_prompt">您确定要关闭该页面吗?</string>
    <string name="prompt">提示</string>
    <string name="no_install_google_map_prompt">您尚未安装谷歌地图或地图版本过低</string>
    <string name="subscribe_now">立即预订</string>
    <string name="low_rating_with_number">低分(%1$d)</string>
    <string name="price_above_number">₱%1$d起</string>
    <string name="mine_other">其他</string>
    <string name="news_follow">关注</string>
    <string name="news_followed">已关注</string>
    <string name="news_recommend">推荐</string>
    <string name="news_my_channel">我的频道</string>
    <string name="news_more_channel">更多频道</string>
    <string name="news_click_to_channel">点击进入频道</string>
    <string name="news_click_to_add_channel">点击添加频道</string>
    <string name="news_edit_channel">编辑</string>
    <string name="news_finish_channel">完成</string>
    <string name="integral">我的积分</string>
    <string name="consecutive_check_in_to_win_integral">连续签到赢积分</string>
    <string name="integral_rule">签到规则</string>
    <string name="integral_continuous_time">1天</string>
    <string name="my_scores">我的积分</string>
    <string name="sign_in_now">立即签到</string>
    <string name="already_sign_in">已签到</string>
    <string name="points_task">积分任务</string>
    <string name="points_details">积分明细</string>
    <string name="hint">提示</string>
    <string name="recommit">重新提交</string>
    <string name="request_error">请求错误%1$d</string>
    <string name="day_1">1天</string>
    <string name="day_2">2天</string>
    <string name="day_3">3天</string>
    <string name="day_4">4天</string>
    <string name="day_5">5天</string>
    <string name="day_6">6天</string>
    <string name="day_7">7天</string>
    <string name="sign_in_rule">签到规则</string>
    <string name="sign_in_rule_message">1、登录用户每天可签到1次，并领取奖励。\n2、连续签到7天会有额外积分，其余连续签到天数均无额外积分\n3、当连续签到中断后，之前攒下的积分会保留，不会清零但是会重新累计连续签到天数。\n4、如果出现用户违规行为，where有权立即终止其签到。</string>
    <string name="temp_zero">0</string>
    <string name="to_finish">去完成</string>
    <string name="finished">已完成</string>
    <string name="add_format">+%1$d</string>
    <string name="cut_format">-%1$d</string>
    <string name="type_register">注册</string>
    <string name="type_invite">邀请</string>
    <string name="type_consumption">消费</string>
    <string name="type_comment">评论</string>
    <string name="type_sign_in">签到</string>
    <string name="empty_data_default">暂无相关内容</string>
    <string name="item_sign_in">签到</string>
    <string name="item_sign_in_content">成功签到可获得20积分</string>
    <string name="item_comment">评论商家</string>
    <string name="ic_task_comment_content">给好评可以获得20积分</string>
    <string name="ic_task_invite">邀请新用户注册</string>
    <string name="ic_task_invite_content">注册成功后邀请者可获得500积分</string>
    <string name="ic_task_register">注册积分</string>
    <string name="ic_task_register_content">注册成功后可获得500积分</string>
    <string name="news_more_recommend">更多推荐</string>
    <string name="mine_customer_service">我的客服</string>
    <string name="title_setting">设置</string>
    <string name="sign_out">退出登录</string>
    <string name="personal_information">个人信息</string>
    <string name="login_password">登录密码</string>
    <string name="account_binding_management">账号绑定管理</string>
    <string name="modify_mobile_phone_number">修改手机</string>
    <string name="notification">消息通知</string>
    <string name="message_hint">第一时间接收订单提醒、优惠促销</string>
    <string name="cache_cleaning">清理缓存(0M)</string>
    <string name="cache_cleaning_format">清理缓存(%1$s)</string>
    <string name="feedback">意见反馈</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="about_app">关于where</string>
    <string name="login_phone_input">请输入手机号</string>
    <string name="verify_code_hint">请输入验证码</string>
    <string name="get_verify">获取验证码</string>
    <string name="login_in">登录</string>
    <string name="register_login">注册&#160;/&#160;登录</string>
    <string name="password_login">密码登录</string>
    <string name="verify_login">验证码登录</string>
    <string name="other_login_type">其他登录方式</string>
    <string name="login_rule">登录代表同意&lt;用户协议&gt;和&lt;隐私政策&gt;和&lt;免责声明&gt;</string>
    <string name="login_rule_default">登录代表同意</string>
    <string name="login_rule_keyword_0">&lt;用户协议&gt;</string>
    <string name="login_rule_default_and">&#160;和&#160;</string>
    <string name="login_rule_keyword_1">&lt;隐私政策&gt;</string>
    <string name="input_password_hint">请输入8–16位字母和数字组合</string>
    <string name="confirm">确定</string>
    <string name="philippines_63">菲律宾 +63</string>
    <string name="china_86">中国 +86</string>
    <string name="wrong_phone_hint">手机号格式错误</string>
    <string name="country_code_format">+%1$s</string>
    <string name="get_again">重新获取</string>
    <string name="count_down_format">重新获取(%1$d)</string>
    <string name="verify_code_send_success">验证码发送成功</string>
    <string name="set_password">设置密码</string>
    <string name="register_success">注册成功</string>
    <string name="forgot_password">忘记密码</string>
    <string name="password_reset">重置密码</string>
    <string name="password_reset_success">密码修改成功</string>
    <string name="password_length_error_hint">密码长度错误，请输入8–16位字符的密码。</string>
    <string name="password_format_error_hint">密码格式错误，请输入字母+数字组合。</string>
    <string name="main_back_hint">再按一次退出app。</string>
    <string name="sign_out_hint">确定退出登录吗？</string>
    <string name="collection_tab_same_city">同城</string>
    <string name="collection_tab_article">文章</string>
    <string name="collection_tab_video">视频</string>
    <string name="collection_tab_good">商品</string>
    <string name="bind_phone">绑定手机</string>
    <string name="is_client_valid">客户端不存在</string>
    <string name="is_client_valid_facebook">您未安装Facebook，是否前往GooglePlay安装？</string>
    <string name="authorization_failed">授权失败</string>
    <string name="authorization_cancel">授权取消</string>
    <string name="mine_footprint_title">我的足迹</string>
    <string name="about_app_title">关于Where</string>
    <string name="filter">筛选</string>
</resources>