<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_tab_home_home"
        android:title="@string/main_tab_title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/selector_tab_home_category"
        android:title="@string/main_tab_title_category" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/selector_tab_home_order"
        android:title="@string/main_tab_title_order" />


    <item
        android:id="@+id/navigation_notifications_2"
        android:icon="@drawable/selector_tab_home_mine"
        android:title="@string/main_tab_title_mine" />

</menu>