<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_388"
    android:background="@color/white">

    <TextView
        android:id="@+id/pricePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/price_prompt"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <ImageView-->
    <!--        android:id="@+id/yuanIconPrompt"-->
    <!--        android:layout_width="@dimen/dp_14"-->
    <!--        android:layout_height="@dimen/dp_14"-->
    <!--        android:src="@drawable/flag_cn"-->
    <!--        app:layout_constraintStart_toEndOf="@id/pricePrompt"-->
    <!--        android:layout_marginStart="@dimen/dp_8"-->
    <!--        app:layout_constraintTop_toTopOf="@id/pricePrompt"-->
    <!--        />-->

    <TextView
        android:id="@+id/priceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:textColor="@color/blue_4C9EF2"
        android:textSize="@dimen/sp_13"
        app:layout_constraintStart_toEndOf="@id/pricePrompt"
        app:layout_constraintTop_toTopOf="@id/pricePrompt" />

    <com.jaygoo.widget.RangeSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        app:layout_constraintTop_toBottomOf="@id/pricePrompt"
        app:rsb_indicator_drawable="@drawable/seek_bar_indicator"
        app:rsb_indicator_height="@dimen/dp_22"
        app:rsb_indicator_padding_bottom="@dimen/dp_3"
        app:rsb_indicator_padding_top="@dimen/dp_3"
        app:rsb_indicator_show_mode="showWhenTouch"
        app:rsb_indicator_width="@dimen/dp_43"
        app:rsb_max="50"
        app:rsb_mode="range"
        app:rsb_progress_color="@color/blue_499cf2"
        app:rsb_thumb_drawable="@drawable/seek_bar_thumb"
        app:rsb_tick_mark_mode="number" />


    <TextView
        android:id="@+id/price0To1"
        style="@style/hotel_star_tv"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/price_0_to_1"
        app:layout_constraintEnd_toStartOf="@id/price1To2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBar" />

    <TextView
        android:id="@+id/price1To2"
        style="@style/hotel_star_tv"
        android:text="@string/price_1_to_2"
        app:layout_constraintEnd_toStartOf="@id/price2To5"
        app:layout_constraintStart_toEndOf="@id/price0To1"
        app:layout_constraintTop_toTopOf="@id/price0To1" />

    <TextView
        android:id="@+id/price2To5"
        style="@style/hotel_star_tv"
        android:text="@string/price_2_to_5"
        app:layout_constraintEnd_toStartOf="@id/priceAbove5"
        app:layout_constraintStart_toEndOf="@id/price1To2"
        app:layout_constraintTop_toTopOf="@id/price0To1" />

    <TextView
        android:id="@+id/priceAbove5"
        style="@style/hotel_star_tv"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/price_above_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/price2To5"
        app:layout_constraintTop_toTopOf="@id/price0To1" />

    <TextView
        android:id="@+id/starPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/prompt_star"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_13"
        app:layout_constraintStart_toStartOf="@id/pricePrompt"
        app:layout_constraintTop_toBottomOf="@id/price0To1" />

    <com.jcs.where.widget.DrawableTextView
        android:id="@+id/starLessThan2"
        style="@style/hotel_star_star_tv"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_7"
        android:text="@string/start_less_than_2"
        app:layout_constraintEnd_toStartOf="@id/star3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starPrompt" />

    <com.jcs.where.widget.DrawableTextView
        android:id="@+id/star3"
        style="@style/hotel_star_star_tv"
        android:text="@string/digital_3"
        app:layout_constraintEnd_toStartOf="@id/star4"
        app:layout_constraintStart_toEndOf="@id/starLessThan2"
        app:layout_constraintTop_toTopOf="@id/starLessThan2" />

    <com.jcs.where.widget.DrawableTextView
        android:id="@+id/star4"
        style="@style/hotel_star_star_tv"
        android:text="@string/digital_4"
        app:layout_constraintEnd_toStartOf="@id/star5"
        app:layout_constraintStart_toEndOf="@id/star3"
        app:layout_constraintTop_toTopOf="@id/starLessThan2" />

    <com.jcs.where.widget.DrawableTextView
        android:id="@+id/star5"
        style="@style/hotel_star_star_tv"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/digital_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/star4"
        app:layout_constraintTop_toTopOf="@id/starLessThan2" />

    <TextView
        android:id="@+id/scorePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/score_prompt"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_13"
        app:layout_constraintStart_toStartOf="@id/pricePrompt"
        app:layout_constraintTop_toBottomOf="@id/starLessThan2" />

    <TextView
        android:id="@+id/score_30"
        style="@style/hotel_star_tv"
        android:layout_width="@dimen/dp_78"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_7"
        android:text="@string/score_3_0"
        app:layout_constraintEnd_toStartOf="@id/score_35"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scorePrompt" />

    <TextView
        android:id="@+id/score_35"
        style="@style/hotel_star_tv"
        android:layout_width="@dimen/dp_78"
        android:layout_height="@dimen/dp_44"
        android:text="@string/score_3_5"
        app:layout_constraintEnd_toStartOf="@id/score_40"
        app:layout_constraintStart_toEndOf="@id/score_30"
        app:layout_constraintTop_toTopOf="@id/score_30" />

    <TextView
        android:id="@+id/score_40"
        style="@style/hotel_star_tv"
        android:layout_width="@dimen/dp_78"
        android:layout_height="@dimen/dp_44"
        android:text="@string/score_4_0"
        app:layout_constraintEnd_toStartOf="@id/score_45"
        app:layout_constraintStart_toEndOf="@id/score_35"
        app:layout_constraintTop_toTopOf="@id/score_30" />

    <TextView
        android:id="@+id/score_45"
        style="@style/hotel_star_tv"
        android:layout_width="@dimen/dp_78"
        android:layout_height="@dimen/dp_44"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/score_4_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/score_40"
        app:layout_constraintTop_toTopOf="@id/score_30" />

    <Button
        android:id="@+id/ensureBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/shape_ensure_btn"
        android:gravity="center"
        android:text="@string/ensure"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>